Add landing page project

--- a/index.html
+++ b/index.html
@@ -91,6 +91,27 @@
 
             <div class="project">
               <div class="project-header">
+                Landing Page
+              </div>
+              <div class="project-body">
+                <a href="https://dolorismachina.github.io/fcc-landing-page/" target="_blank">
+                  <img alt="Project Screenshot" src="/img/landing.png" />
+                </a>
+              </div>
+              <div class="project-footer">
+                <a href="https://dolorismachina.github.io/fcc-landing-page/" target="_blank">
+                  <i class="fas fa-globe"></i>
+                  Website
+                </a>
+                <a href="https://github.com/dolorismachina/fcc-landing-page" target="_blank">
+                  <i class="fab fa-github"></i>
+                  Source
+                </a>
+              </div>
+            </div> <!-- .project -->
+
+            <div class="project">
+              <div class="project-header">
                 Roman Converter
               </div>
               <div class="project-body">
